<!--
  ~ DDOLib is under MIT License
  ~ Copyright (c)  2025 UCLouvain-Cetic
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.ddolib</groupId>
    <artifactId>ddolib</artifactId>
    <packaging>jar</packaging>
    <version>0.0.1</version>
    <name>${project.groupId}:${project.artifactId}</name>
    <description>Discrete Optimization Library based on Decision Diagrams</description>
    <url>https://github.com/DDOLIB-CETIC-UCL/DDOLib</url>
    <organization>
        <name>Cetic-UCLouvain</name>
        <url>https://github.com/DDOLIB-CETIC-UCL/DDOLib</url>
    </organization>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Renaud De Landtsheer</name>
            <email>renaud.delandtsheer@cetic.be</email>
            <organization>CETIC / COAL</organization>
            <organizationUrl>https://www.cetic.be</organizationUrl>
        </developer>
        <developer>
            <name>Thomas Fayolle</name>
            <email>thomas.fayolle@cetic.be</email>
            <organization>CETIC / COAL</organization>
            <organizationUrl>https://www.cetic.be</organizationUrl>
        </developer>
        <developer>
            <name>Fabian Germeau</name>
            <email>fabian.germeau@cetic.be</email>
            <organization>CETIC / COAL</organization>
            <organizationUrl>https://www.cetic.be</organizationUrl>
        </developer>
        <developer>
            <name>Quentin Meurisse</name>
            <email>quentin.meurisse@cetic.be</email>
            <organization>CETIC / COAL</organization>
            <organizationUrl>https://www.cetic.be</organizationUrl>
        </developer>
        <developer>
            <name>Stefano Michelini</name>
            <email>stefano.michelini@cetic.be</email>
            <organization>CETIC / COAL</organization>
            <organizationUrl>https://www.cetic.be</organizationUrl>
        </developer>
        <developer>
            <name>Pierre Schaus</name>
            <email>pierre.schaus@uclouvain.be</email>
            <organization>UCLouvain / ICTEAM / INGI</organization>
            <organizationUrl></organizationUrl>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <checkstyle.config.location>${basedir}/checkstyle.xml</checkstyle.config.location>
        <junit.jupiter.version>5.9.1</junit.jupiter.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20230227</version>
        </dependency>
        <dependency>
            <groupId>org.jgrapht</groupId>
            <artifactId>jgrapht-core</artifactId>
            <version>1.5.2</version>
        </dependency>
        <dependency>
            <groupId>org.jgrapht</groupId>
            <artifactId>jgrapht-io</artifactId>
            <version>1.5.2</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.10</version>
                <configuration>
                    <append>true</append>
                    <excludes>
                        <exclude>**/examples/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
                    <skipTests>false</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <reportOutputDirectory>${project.reporting.outputDirectory}</reportOutputDirectory>
                    <destDir>javadoc</destDir>
                    <source>21</source>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>